mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mysql

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app: mysql
  
    spec:
      containers:
        - image: mysql:8.4.0
          name: mysql
          ports:
          - containerPort: 3306
            name: mysql
