site-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: my-website-deployment

spec:
  replicas: 5
  selector:
    matchLabels:
      app: my-website

  template:
    metadata:
      labels:
        app: my-website

    spec:
      containers:
      - name: my-website
        image: localhost:5000/my_first_image
        volumeMounts:
        - name: my-website-volume
          mountPath: /etc/todos
        ports:
        - containerPort: 3000
      volumes:
        - name: my-website-volume
          persistentVolumeClaim:
            claimName: my-website-pvc
